--- a/index.html
+++ b/index.html
@@ -1905,7 +1905,7 @@
           };
          
           // Submit to the form endpoint
-          fetch('https://submit-form.com/LtHX0EZEp', {
+          fetch('https://submit-form.com/D1qM7cVwq', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
@@ -2101,3 +2101,4 @@
   
 
 </body></html>
+
